# gnomeutils

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  conanfile.py  events.cpp  functions.cpp  hooks.cpp  protectedmem.cpp  sharedobject.cpp  vtable.cpp
include/gnomeutils/: all.h  color.h  events.h  functions.h  hooks.h  protectedmem.h  sharedobject.h  version.h  vtable.h  vtable.hpp
src/: core.cpp  functions.cpp  hooks.cpp  protectedmem.cpp  sharedobject.cpp  vtable.cpp
